fix css to label align

--- a/generators/app/templates/assets/css/app.css
+++ b/generators/app/templates/assets/css/app.css
@@ -6,3 +6,32 @@
 .form-control.ng-dirty.ng-invalid {
 	border: 1px solid #C72557
 }
+
+.form-horizontal .control-label {
+	padding-top: 0px;
+	margin-bottom: 0;
+}
+
+@media (max-width: 767px) {
+    .form-horizontal .control-label.col-xs-12 {
+        text-align: left;
+    }
+}
+
+@media (min-width: 768px) {
+    .form-horizontal .control-label.col-sm-12 {
+        text-align: left;
+    }
+}
+
+@media (min-width: 992px) {
+    .form-horizontal .control-label.col-md-12 {
+        text-align: left;
+    }
+}
+
+@media (min-width: 1200px) {
+    .form-horizontal .control-label.col-lg-12 {
+        text-align: left;
+    }
+}
